completing changes for bug 22251. You also have to unzip the zip file attached to bug 22251 in mozilla/rdf to get the missing protocolhandlers.